fully functioning clock, need to fix ticking errors when it ticks over at 12 o'clock mark

--- a/style.css
+++ b/style.css
@@ -25,10 +25,12 @@
 .hourHand {
 }
 
-.minuteHand {}
+.minuteHand {
+	background: white;
+}
 
 .secondHand {
-    background: grey;
+    background: gray;
     height: 2.5px;
     transform: rotate(90deg);
 }
